# embedding-pca-during-training

./: .gitignore  README.md  hf_login.sh  pyproject.toml
configs/families/: olmo.yaml  pythia.yaml
configs/models/: olmo-1b.yaml  olmo-2-13b.yaml  olmo-2-1b.yaml  olmo-2-32b.yaml  olmo-2-7b.yaml  olmo-3-32b.yaml  olmo-3-7b.yaml  pythia-1.4b.yaml  pythia-12b.yaml  pythia-160m.yaml  pythia-1b.yaml  pythia-2.8b.yaml  pythia-410m.yaml  pythia-6.9b.yaml  pythia-70m.yaml
src/: __init__.py
src/config/: loader.py
src/hf_utils/: checkpoints.py  download.py
src/io_utils/: results_writer.py
src/pca/: compute.py
src/pipeline/: runner.py
src/scripts/: run_family.py  run_model.py  summarize_results.py
src/tensors/: embedding_loader.py
